DFG::LICMPhase should attempt to hoist edge type checks if hoisting the whole node fails https://bugs.webkit.org/show_bug.cgi?id=144525

Reviewed by Filip Pizlo.

This patch teaches LICM to fall back to hoisting a node's type checks when
hoisting the entire node fails.

This patch follow the same principles we use when deciding to hoist nodes in general:
- If the pre header is control equivalent to where the current check is, we
go ahead and hoist the check.
- Otherwise, if hoisting hasn't failed before, we go ahead and gamble and
hoist the check. If hoisting failed in the past, we will not hoist the check.

* dfg/DFGLICMPhase.cpp:
(JSC::DFG::LICMPhase::attemptHoist):
* dfg/DFGUseKind.h:
(JSC::DFG::checkMayCrashIfInputIsEmpty):


Canonical link: https://commits.webkit.org/201326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232075 268f45cc-cd09-0410-ab3c-d52691b4dbfc